# effectful-tracing

./: .gitattributes  .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  effectful-tracing.cabal  fourmolu.yaml  hlint.yaml
.github/workflows/: ci.yml  release.yml
bench/: Main.hs
docs/: cookbook.md  design.md  tutorial.md
examples/local-dev/: README.md  Sampling.hs  Worker.hs  cabal.project  local-dev.cabal
examples/order-pipeline/: Main.hs  README.md  cabal.project  docker-compose.yml  order-pipeline.cabal
examples/servant-app/: Main.hs  README.md  cabal.project  docker-compose.yml  servant-app.cabal
src/Effectful/: Tracing.hs
src/Effectful/Tracing/: Attribute.hs  Baggage.hs  Concurrent.hs  Effect.hs  EnvConfig.hs  Log.hs  Propagation.hs  Sampler.hs  SemConv.hs  SpanLimits.hs  Testing.hs
src/Effectful/Tracing/Instrumentation/: Amqp.hs  Database.hs  HttpClient.hs  Messaging.hs  PostgresqlSimple.hs  Servant.hs  SqliteSimple.hs  Valiant.hs  Wai.hs
src/Effectful/Tracing/Internal/: Clock.hs  Ids.hs  Live.hs  Types.hs
src/Effectful/Tracing/Interpreter/: InMemory.hs  NoOp.hs  OpenTelemetry.hs  PrettyPrint.hs
src/Effectful/Tracing/Propagation/: B3.hs  Baggage.hs  Composite.hs  Jaeger.hs
test/: Main.hs
test-space-leak/: Main.hs
test/Effectful/Tracing/: AsyncExceptionSpec.hs  AttributeSpec.hs  BaggageSpec.hs  CompileTest.hs  ConcurrentSpec.hs  EnvConfigSpec.hs  FuzzSpec.hs  Gen.hs  IdGenSpec.hs  IdsSpec.hs  InMemorySpec.hs  LifecycleSpec.hs  LogSpec.hs  NoOpSpec.hs  OpenTelemetrySpec.hs  PrettyPrintLeakSpec.hs  PrettyPrintSpec.hs  PropagationSpec.hs  PropertySpec.hs  SamplerSpec.hs  SpanLimitsSpec.hs  TestingSpec.hs  ThunkSpec.hs  TypesSpec.hs
test/Effectful/Tracing/Instrumentation/: AmqpSpec.hs  DatabaseSpec.hs  HttpClientSpec.hs  MessagingSpec.hs  ServantSpec.hs  WaiSpec.hs
test/Effectful/Tracing/Propagation/: B3Spec.hs  CompositeSpec.hs  JaegerSpec.hs
test/golden/: colored.txt  error.txt  nested.txt  relative-no-details.txt
