cabal-version:      3.0
name:               servant-app
version:            0
synopsis:           effectful-tracing Servant example (not published)
build-type:         Simple

executable servant-app
  main-is:          Main.hs
  default-language: GHC2021
  default-extensions:
    DataKinds
    OverloadedStrings
    TypeOperators

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
    , base
    , effectful
    , effectful-tracing
    , hs-opentelemetry-exporter-otlp
    , hs-opentelemetry-sdk
    , http-client
    , servant-server
    , text
    , wai
    , warp
